<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/hybrid"
        android:orderInCategory="100"
        android:title="@string/hybrid"
        app:showAsAction="never" />
    <item
        android:id="@+id/terain"
        android:orderInCategory="100"
        android:title="@string/terain"
        app:showAsAction="never" />
    <item
        android:id="@+id/satelite"
        android:orderInCategory="100"
        android:title="@string/satelite"
        app:showAsAction="never" />
    <item
        android:id="@+id/normal"
        android:orderInCategory="100"
        android:title="@string/normal"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>
